# qdts

./: .gitignore  README.md
experiments/qdts_solver_nn/: README.md  benchmark_onnx.cpp  benchmark_results.txt  build_and_run_benchmark.sh  evaluation.ipynb  onnx_wrapper.py  test_onnx.py  training.ipynb
experiments/qdts_solver_nn/models/: Model_N10_L3_H256_R0.0_seed123.pt  Model_N10_L3_H256_R0.0_seed246.pt  Model_N10_L3_H256_R0.0_seed369.pt  Model_N10_L3_H256_R0.0_seed492.pt  Model_N10_L3_H256_R0.0_seed615.pt  Model_N10_L3_H256_R0.0_seed738.pt  Model_N10_L3_H256_R0.0_seed861.pt  Model_N10_L3_H256_R0.0_seed984.pt  Model_N10_L3_H256_R0.25_seed123.pt  Model_N10_L3_H256_R0.25_seed246.pt  Model_N10_L3_H256_R0.25_seed369.pt  Model_N10_L3_H256_R0.25_seed492.pt  Model_N10_L3_H256_R0.25_seed615.pt  Model_N10_L3_H256_R0.25_seed738.pt  Model_N10_L3_H256_R0.25_seed861.pt  Model_N10_L3_H256_R0.25_seed984.pt  Model_N11_L3_H256_R0.0_seed123.pt  Model_N11_L3_H256_R0.0_seed246.pt  Model_N11_L3_H256_R0.0_seed369.pt  Model_N11_L3_H256_R0.0_seed492.pt  Model_N11_L3_H256_R0.0_seed615.pt  Model_N11_L3_H256_R0.0_seed738.pt  Model_N11_L3_H256_R0.0_seed861.pt  Model_N11_L3_H256_R0.0_seed984.pt  Model_N11_L3_H256_R0.25_seed123.pt  Model_N11_L3_H256_R0.25_seed246.pt  Model_N11_L3_H256_R0.25_seed369.pt  Model_N11_L3_H256_R0.25_seed492.pt  Model_N11_L3_H256_R0.25_seed615.pt  Model_N11_L3_H256_R0.25_seed738.pt  Model_N11_L3_H256_R0.25_seed861.pt  Model_N11_L3_H256_R0.25_seed984.pt  Model_N12_L3_H256_R0.0_seed123.pt  Model_N12_L3_H256_R0.0_seed246.pt  Model_N12_L3_H256_R0.0_seed369.pt  Model_N12_L3_H256_R0.0_seed492.pt  Model_N12_L3_H256_R0.0_seed615.pt  Model_N12_L3_H256_R0.0_seed738.pt  Model_N12_L3_H256_R0.0_seed861.pt  Model_N12_L3_H256_R0.0_seed984.pt  (+153 more)
experiments/qdts_solver_nn/onnx_exports/: benchmark.txt
experiments/qdts_solver_nn/qdts_nn/: auxiliar.py  model.py  train.py
max/: CMakeLists.txt  README.md  clone_minapi.bat  clone_minapi.sh
max/cmake/: CPM.cmake  Info.plist.in
max/patches/: collect_mac_os_release.sh  install.sh
max/patches/demo/: carrier_amp_distribution_panel.maxpat  main.maxpat  target_amp_distribution_sliders_panel.maxpat
max/patches/guides/: quick_guides.key
max/patches/patchers/bpatchers/: spectral_peaks_audio_player.maxpat  target_amp_distribution_sliders_panel.maxpat
max/patches/patchers/js/: qdts_carrier_freqs.js  synth_input_parser.js
max/patches/resources/pyScripts/: 406611__josemdavid__melo-dina.txt  620628__bogotta__bgb-bass-85bpm.txt  Trimmed2_613396__elzozo__double-bass-upright-bass-dark-ambient.m4a  Trimmed2_613396__elzozo__double-bass-upright-bass-dark-ambient.txt  analyze_audio.py  qdts_files.js  qdts_player.js
max/patches/solver2/: main.maxpat
max/patches/solver_nn/: carrier_amp_distribution_panel.maxpat  main.maxpat  main_solver_nn.maxpat  synth.maxpat  target_amp_distribution_sliders_panel.maxpat  visual_feedback_linked_sliders.js
max/patches/standalone/solver_nn/: main_solver_nn.maxpat
max/source/benchmarks/: README.md  benchmark_comparison.cpp  benchmark_quality.cpp  benchmark_smoothness.cpp  build_and_run_comparison.sh  build_and_run_quality.sh  build_and_run_smoothness.sh  plot_comparison.py  plot_quality.py  plot_smoothness.py
max/source/include/: onnx_helpers.h  qdts_shared.h
max/source/qdts.solver_nn/: qdts.solver_nn.cpp
max/source/qdts.spectrum_view/: qdts.spectrum_view.cpp
